# WFiIS-PGK-2019

./: .gitignore
Lab01/: CMakeLists.txt  lab01.cpp  menu.h  shapes.h  window.h
Lab02/: CMakeLists.txt  circle.h  colors.h  lab02.cpp  menu.h  slider.h  window.h
Lab03/: CMakeLists.txt  frame.cpp  frame.h  main.cpp  main.h
Lab04/: CMakeLists.txt  ChartClass.cpp  ChartClass.h  GUI.cpp
Lab05/: CMakeLists.txt  GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  vecmat.cpp  vecmat.h
Lab06/: CMakeLists.txt  GUI.cpp  GUI.h  GUIMyFrame1.cpp  GUIMyFrame1.h  main.cpp
